[Task-3]:add base entity, fix certificate test